fix playing overlapping sound clips

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
   font: 500 1em/1.5 "futura-pt", "Century Gothic", "Futura", sans-serif;
 }
 
+#advice {
+  font-size: 15px;
+}
+
 #buttons {
   margin-bottom: 20px;
 }
